# phc-winner-argon2

./: CMakeLists.txt  COMPILATION.md  Makefile  make_tests.sh
src/: bench.c  genkat.c  opt.c  ref.c  run.c  test.c
src/blake2/: blake2.h
